Fix: fixed all problems