@@ -3,6 +3,7 @@ package com.group11.office_queue.services;
 import com.group11.office_queue.entities.CounterEntity;
 import com.group11.office_queue.entities.ServiceEntity;
 import com.group11.office_queue.entities.TicketEntity;
+import com.group11.office_queue.models.NextCustomerDTO;
 import com.group11.office_queue.models.QueueDTO;
 import com.group11.office_queue.models.ServiceDTO;
 import com.group11.office_queue.models.TicketDTO;
@@ -11,6 +12,7 @@ import com.group11.office_queue.repos.ServicesRepository;
 import com.group11.office_queue.repos.TicketsRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -19,7 +21,7 @@ import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -33,18 +35,20 @@ public class TicketService {
 
     public TicketDTO getNewTicket(Long serviceId) {
         var service = serviceRepository.findById(serviceId).orElseThrow(() -> new RuntimeException("Service not found"));
-        var todayStartingTime = LocalDateTime.now().withHour(6).withMinute(0).withSecond(0).withNano(0);
+        var todayStartingTime = LocalDateTime.now().withHour(0).withMinute(0).withSecond(0).withNano(0);
         var ticketsCount = ticketRepository
                 .countAllByDateTimeAfterAndServiceId(todayStartingTime, serviceId);
         var ticket = new TicketEntity();
         ticket.setService(service);
         ticket.setDateTime(LocalDateTime.now());
         ticket.setIsServed(false);
-        ticket.setWaitListCode(String.valueOf(service.getName().charAt(0)) + ticketsCount + 1);
+        ticket.setWaitListCode(String.valueOf(service.getName().charAt(0)) + (ticketsCount + 1));
         ticket = ticketRepository.save(ticket);
         var result = new TicketDTO();
         result.setId(ticket.getId());
         result.setWaitListCode(ticket.getWaitListCode());
+        result.setServiceId(ticket.getService().getId());
+        result.setServiceName(ticket.getService().getName());
         result.setDateTime(ticket.getDateTime());
         result.setEstimatedTime(calculateEstimatedWaitingTime(service, todayStartingTime));
         return result;
@@ -53,7 +57,7 @@ public class TicketService {
     private LocalTime calculateEstimatedWaitingTime(ServiceEntity serviceEntity, LocalDateTime todayStartingTime) {
         double tr = serviceEntity.getDurationInMinutes(); // Service time for request type r
         long nr = ticketRepository.countAllByServiceIdAndIsServedFalseAndDateTimeAfter(serviceEntity.getId(), todayStartingTime); // Number of people in queue for request type r
-        List<CounterEntity> counterEntities = counterRepository.findAllByServicesIn(List.of(Set.of(serviceEntity)));
+        List<CounterEntity> counterEntities = counterRepository.findAllByServicesContaining(serviceEntity);
 
         double sum = 0;
         for (CounterEntity counterEntity : counterEntities) {
@@ -77,30 +81,90 @@ public class TicketService {
     }
 
     public List<QueueDTO> getAllTicketsInQueues() {
-        var todayStartingTime = LocalDateTime.now().withHour(6).withMinute(0).withSecond(0).withNano(0);
+        var todayStartingTime = LocalDateTime.now().withHour(0).withMinute(0).withSecond(0).withNano(0);
         var tickets = ticketRepository.findAllByIsServedFalseAndDateTimeAfter(todayStartingTime);
-        Map<ServiceEntity, TicketEntity> ticketMap = tickets.stream()
+
+        Map<ServiceEntity, List<TicketEntity>> ticketMap = tickets.stream()
                 .sorted(Comparator.comparing(TicketEntity::getDateTime))
-                .collect(Collectors.toMap(
+                .collect(Collectors.groupingBy(
                         TicketEntity::getService,
-                        ticket -> ticket,
-                        (existing, replacement) -> existing,
-                        LinkedHashMap::new
+                        LinkedHashMap::new,
+                        Collectors.toList()
                 ));
+
         return ticketMap.entrySet().stream().map(entry -> {
             var queueDTO = new QueueDTO();
             queueDTO.setServiceId(entry.getKey().getId());
             queueDTO.setServiceName(entry.getKey().getName());
-            queueDTO.setTickets(List.of(new TicketDTO(
-                    entry.getValue().getId(),
-                    entry.getValue().getWaitListCode(),
-                    entry.getValue().getDateTime(),
-                    entry.getKey().getId(),
-                    entry.getKey().getName(),
-                    null
-            )));
+            queueDTO.setTickets(entry.getValue().stream()
+                    .map(ticket -> new TicketDTO(
+                            ticket.getId(),
+                            ticket.getWaitListCode(),
+                            ticket.getDateTime(),
+                            entry.getKey().getId(),
+                            entry.getKey().getName(),
+                            null
+                    ))
+                    .collect(Collectors.toList()));
             return queueDTO;
-        }).toList();
+        }).collect(Collectors.toList());
+    }
 
+    public NextCustomerDTO nextCustomer(Long counterId) {
+        var todayStartingTime = LocalDateTime.now().withHour(0).withMinute(0).withSecond(0).withNano(0);
+        Optional<TicketEntity> optTicket = ticketRepository.findFirstByCounterIdAndIsServedFalse(counterId);
+        if (optTicket.isPresent()) {
+            optTicket.get().setIsServed(true);
+            ticketRepository.save(optTicket.get());
+        }
+        var optCounter  = counterRepository.findById(counterId);
+        if (optCounter.isEmpty()) {
+            throw new RuntimeException("Counter not found");
+        }
+        var counter = optCounter.get();
+
+        Sort sortAsc = Sort.by(Sort.Direction.ASC, "dateTime");
+        var tickets = ticketRepository
+                .findAllByServiceIdInAndIsServedFalseAndDateTimeAfterAndCounter(
+                        counter.getServices().stream().map(ServiceEntity::getId).toList(), todayStartingTime, null, sortAsc);
+
+        if (tickets.isEmpty()) {
+            return null;
+        }
+
+        // Group tickets by service
+        Map<ServiceEntity, List<TicketEntity>> ticketsByService = tickets.stream()
+                .collect(Collectors.groupingBy(TicketEntity::getService));
+
+        // Find the group(s) with the maximum size
+        int maxGroupSize = ticketsByService.values().stream()
+                .mapToInt(List::size)
+                .max()
+                .orElse(0);
+
+        // Filter groups with maximum size
+        List<Map.Entry<ServiceEntity, List<TicketEntity>>> largestGroups = ticketsByService.entrySet().stream()
+                .filter(entry -> entry.getValue().size() == maxGroupSize)
+                .toList();
+
+        // If there's only one largest group, return the first ticket from that group
+        if (largestGroups.size() == 1) {
+            var ticket = largestGroups.get(0).getValue().get(0);
+            ticket.setCounter(counter);
+            ticketRepository.save(ticket);
+            return new NextCustomerDTO(ticket.getWaitListCode());
+        }
+
+        // If there are multiple largest groups, find the one with the lowest service time
+        ServiceEntity serviceWithLowestDuration = largestGroups.stream()
+                .min(Comparator.comparingInt(entry -> entry.getKey().getDurationInMinutes()))
+                .map(Map.Entry::getKey)
+                .orElseThrow();
+
+        // Return the first ticket from the group with the lowest service time
+        var ticket = ticketsByService.get(serviceWithLowestDuration).get(0);
+        ticket.setCounter(counter);
+        ticketRepository.save(ticket);
+        return new NextCustomerDTO(ticket.getWaitListCode());
     }
 }
